Remove aguafria.std need